# python-srecord

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst  srecord.checksum.rst  srecord.core.rst  srecord.generator.rst  srecord.input.rst  srecord.output.rst  srecord.rst  srecord.settings.rst  srecord.transform.rst
srecord/: __init__.py  checksum.py  core.py  generator.py  input.py  output.py  settings.py  test.py  transform.py
