[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
name = srecord
license_files = LICENSE.txt
version = 1.0.0.dev2
description = "Binary image building tools for embedded software"
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/NJDFan/python-srecord
author = Rob Gaddi
author_email = rgaddi@highlandtechnology.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Embedded Systems
keywords=srecord, binary, eeprom, flash

[options]
include_package_data = True
packages = srecord
python_requires = >= 3.6
